endret linke navn

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -662,6 +662,10 @@ body {
   text-align: left;
 }
 
+.footer__image {
+  width: 5rem;
+}
+
 .footer__tableLeft tr {
   display: flex;
   flex-direction: column;
