--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -715,8 +715,8 @@ body {
 /* Activity page */
 
 .activity {
-  padding: 1.5rem; /*  1.25rem */
-  max-width: 50rem; /*  50rem */
+  padding: 1.5rem;
+  max-width: 50rem; 
   margin: auto;
   gap: 1rem;
 }
@@ -730,13 +730,13 @@ body {
 /* Galleri med bilder */
 .gallery {
   display: flex;
-  gap: 0.75rem; /* 0.625rem */
+  gap: 0.75rem; 
   flex-wrap: wrap;
 }
 
 .gallery img {
   width: 48%; /* To bilder per rad på desktop */
-  border-radius: 0.5rem; /* 0.5rem */
+  border-radius: 0.5rem; 
   transition: transform 0.3s ease;
 }
 
